--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,9 @@ button {
   padding: 0;
   margin: 0;
 }
-
+.header-nav-link.active {
+  color: var(--bg-color-darkblue-hover);
+}
 .header-nav-link:hover,
 .header-nav-link:focus {
   color: #404bbf;
@@ -91,6 +93,10 @@ button {
   margin-left: auto;
   margin-right: auto; */
 
+
+  position: fixed;
+  top: 0;
+width: 100%;
   background-color: #ffffff;
   border-bottom: 1px solid #e7e9fc;
   align-items: center;
@@ -100,6 +106,11 @@ button {
 }
 
 .header-nav-link {
+
+
+position: relative;
+
+
   display: block;
   font-weight: 500;
   font-size: 16px;
@@ -109,6 +120,27 @@ button {
   padding: 24px 0;
 }
 
+.header-nav-link::after {
+ 
+  content: '';
+
+position: absolute;
+bottom: 0;
+left: 0;
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  /* background: #404BBF; */
+}
+
+/* .....ACTIVE.......*/
+.header-nav-link.active::after {
+
+  background: #404BBF;
+
+}
+/* ................ */
 .header-logo {
   font-family: "Raleway", sans-serif;
   font-style: normal;
@@ -562,6 +594,51 @@ button {
 .footer-icons-link:focus {
   background-color: var(--color-icon-hover);
 }
+
+
+/* MODAL WINDOW */
+
+
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+
+  width: 100%;
+  height: 100%;
+
+  background: rgba(46, 47, 66, 0.4);
+}
+.modal {
+position: absolute;
+top: calc(50% - 202px);
+left: calc(50% - 292px);
+
+
+
+  width: 408px;
+  height: 584px;
+  background: #FCFCFC;
+  border-radius: 4px;
+}
+.modal-close-btn {
+position: absolute;
+top: -24px;
+right: -24px;
+
+  background: #E7E9FC;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border: none;
+}
+.modal-close-icon {
+
+
+}
+
 
 /* PORTFOLIO*/
 
