--- a/css/styles.css
+++ b/css/styles.css
@@ -601,6 +601,7 @@ left: 0;
 
 
 .backdrop {
+   display: none;
   position: fixed;
   top: 0;
   left: 0;
@@ -613,7 +614,7 @@ left: 0;
 }
 .modal {
 position: absolute;
-top: calc(50% - 202px);
+top: calc(50% - 204px);
 left: calc(50% - 292px);
 
 
@@ -628,11 +629,17 @@ position: absolute;
 top: 24px;
 right: 24px;
 
-  background: #E7E9FC;
+display: flex;
+align-items: center;
+justify-content: center;
+
   width: 24px;
   height: 24px;
+  padding: 0;
+
   border-radius: 50%;
   border: none;
+  background: #E7E9FC;
 }
 .modal-close-icon {
 
@@ -699,6 +706,39 @@ right: 24px;
 }
 
 /* Cads */
+
+.cards-thumb {
+  position: relative;
+}
+
+.overlay {
+position: absolute;
+top: 0;
+left: 0;
+
+
+width: 100%;
+height: 100%;
+
+padding: 40px 32px;
+
+background-color: #4D5AE5;
+
+}
+
+.overlay-text {
+
+  font-size: 16px;
+  line-height: 1.5;
+
+  letter-spacing: 0.02em;
+
+
+color: var(--button-backgroud);
+}
+
+
+
 .card-title-name {
   font-family: "Roboto";
   font-style: normal;
