--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,12 @@ html {
   /* others */
   --indent: 24px;
   --items: 9;
+
+--anim-fast: 300ms ease;
+--anim-slow: 800ms ease;
+
+  --header-idx: 10;
+  --modal-idx: 100;
 }
 
 .body {
@@ -96,6 +102,9 @@ button {
 
   position: fixed;
   top: 0;
+
+z-index: var(--header-idx);
+
 width: 100%;
   background-color: #ffffff;
   border-bottom: 1px solid #e7e9fc;
@@ -257,6 +266,14 @@ left: 0;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
+
+.hero-button:hover,
+.hero-button:focus {
+  background-color: var(--bg-color-darkblue-hover);
+}
+
+
+
 /* section One Feature */
 .features {
   align-items: center;
@@ -601,28 +618,49 @@ left: 0;
 
 
 .backdrop {
-   display: none;
+   /* display: none; */
   position: fixed;
   top: 0;
   left: 0;
 
+  z-index: var(--modal-idx);
 
   width: 100%;
   height: 100%;
 
   background: rgba(46, 47, 66, 0.4);
 }
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+transition-delay: 250ms;
+
+}
+
 .modal {
 position: absolute;
-top: calc(50% - 204px);
-left: calc(50% - 292px);
-
+top: calc(50%);
+left: calc(50%);
+transform: translateX(-50%) translateY(-50%);
 
 
   width: 408px;
-  height: 584px;
+  height: 576px;
   background: #FCFCFC;
   border-radius: 4px;
+
+transition: opacity 250ms ease-in, transform 250ms ease-in;
+transition-delay: 300ms;
+}
+
+
+.backdrop.is-hidden .modal {
+  opacity: 0;
+  transform: translateX(-50%) translateY(-70%);
+transition-delay: 0ms;
+
 }
 .modal-close-btn {
 position: absolute;
@@ -709,6 +747,8 @@ justify-content: center;
 
 .cards-thumb {
   position: relative;
+
+  overflow: hidden;
 }
 
 .overlay {
@@ -716,6 +756,7 @@ position: absolute;
 top: 0;
 left: 0;
 
+transform: translateY(100%);
 
 width: 100%;
 height: 100%;
@@ -723,6 +764,15 @@ height: 100%;
 padding: 40px 32px;
 
 background-color: #4D5AE5;
+
+transition: transform var(--anim-fast);
+
+}
+
+.card-set-item:hover .overlay {
+  transform: translateY(0);
+
+
 
 }
 
@@ -778,6 +828,12 @@ color: var(--button-backgroud);
   
   width: calc((100% - 48px) / 3);
 }
+
+
+
+
+
+
 .app {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
