--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,8 @@ position: relative;
   letter-spacing: 0.02em;
   color: var(--color-txt);
   padding: 24px 0;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-nav-link::after {
@@ -136,6 +138,7 @@ position: relative;
 position: absolute;
 bottom: 0;
 left: 0;
+bottom: -1px;
   display: block;
   width: 100%;
   height: 4px;
@@ -186,6 +189,8 @@ left: 0;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-address-link:hover,
@@ -265,6 +270,8 @@ left: 0;
   border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 }
 
 .hero-button:hover,
@@ -443,6 +450,8 @@ left: 0;
   background-color: var(--logo-text-color);
   border-radius: 50%;
   color: var(--button-backgroud);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .ot-icons {
@@ -497,6 +506,9 @@ left: 0;
   border: 1px solid var(--color-customer-icon);
   border-radius: 4px;
   color: var(--color-customer-icon);
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .custom-icon {
@@ -601,6 +613,7 @@ left: 0;
   background-color: var(--logo-text-color);
   border-radius: 50%;
   color: var(--button-backgroud);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icons {
@@ -629,6 +642,15 @@ left: 0;
   height: 100%;
 
   background: rgba(46, 47, 66, 0.4);
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-hidden {
+   opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 
 .backdrop.is-hidden {
@@ -647,9 +669,14 @@ transform: translateX(-50%) translateY(-50%);
 
 
   width: 408px;
-  height: 576px;
+  min-height: 576px;
   background: #FCFCFC;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 
+  0px 1px 3px rgba(0, 0, 0, 0.12), 
+  0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 transition: opacity 250ms ease-in, transform 250ms ease-in;
 transition-delay: 300ms;
@@ -666,21 +693,32 @@ transition-delay: 0ms;
 position: absolute;
 top: 24px;
 right: 24px;
+width: 24px;
+height: 24px;
+padding: 0;
+border-radius: 50%;
+
 
 display: flex;
 align-items: center;
 justify-content: center;
 
-  width: 24px;
-  height: 24px;
-  padding: 0;
-
-  border-radius: 50%;
   border: none;
-  background: #E7E9FC;
-}
-.modal-close-icon {
+  background-color: #E7E9FC;
+  border: 1px solid rgba(0, 0, 0, 0.1);
 
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  background-color: #404bbf;
+  fill: #ffffff
+}
+
+.modal-close-icon {
+ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
