--- a/css/styles.css
+++ b/css/styles.css
@@ -647,11 +647,11 @@ bottom: -1px;
   visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.is-hidden {
+/* .is-hidden {
    opacity: 0;
   visibility: hidden;
   pointer-events: none;
-}
+} */
 
 .backdrop.is-hidden {
   opacity: 0;
@@ -678,8 +678,7 @@ transform: translateX(-50%) translateY(-50%);
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-transition: opacity 250ms ease-in, transform 250ms ease-in;
-transition-delay: 300ms;
+
 }
 
 
@@ -703,7 +702,7 @@ display: flex;
 align-items: center;
 justify-content: center;
 
-  border: none;
+
   background-color: #E7E9FC;
   border: 1px solid rgba(0, 0, 0, 0.1);
 
@@ -714,12 +713,14 @@ justify-content: center;
 .modal-close-btn:hover,
 .modal-close-btn:focus {
   background-color: #404bbf;
-  fill: #ffffff
+  fill: #ffffff;
+  border: none; 
+
 }
 
 .modal-close-icon {
  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
- 
+
 }
 
 
