--- a/css/styles.css
+++ b/css/styles.css
@@ -640,6 +640,10 @@ button {
   visibility: hidden;
   pointer-events: none;
   transition-delay: 250ms;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .modal {
