--- a/css/styles.css
+++ b/css/styles.css
@@ -114,9 +114,10 @@ button {
 }
 
 .header-nav-link {
-  position: relative;
+  
 
   display: block;
+  position: relative;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -128,7 +129,7 @@ button {
 }
 
 .header-nav-link::after {
-  content: "";
+  content: '';
 
   position: absolute;
   bottom: 0;
@@ -138,12 +139,16 @@ button {
   width: 100%;
   height: 4px;
   border-radius: 2px;
-  /* background: #404BBF; */
+ /* background-color: #404BBF; */
 }
 
 /* .....ACTIVE.......*/
+.header-nav-link.active  {
+  color: #404bbf;
+}
+
 .header-nav-link.active::after {
-  background: #404bbf;
+  background-color: #404bbf;
 }
 /* ................ */
 .header-logo {
@@ -721,6 +726,8 @@ button {
   padding: 12px 24px;
   border: 1px solid #e7e9fc;
   border-radius: 4px;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-list {
