--- a/css/styles.css
+++ b/css/styles.css
@@ -835,7 +835,13 @@ button {
   row-gap: 48px;
 }
 .card-set-item {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: calc((100% - 48px) / 3);
+}
+
+.card-set-item:hover, .overlay-text
+.card-set-item:focus .overlay-text {
+  transform: translateY(0);
 }
 
 .app {
