--- a/css/styles.css
+++ b/css/styles.css
@@ -765,7 +765,6 @@ button {
 
 .cards-thumb {
   position: relative;
-
   overflow: hidden;
 }
 
@@ -791,6 +790,23 @@ button {
 }
 
 .overlay-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  transform: translateY(100%);
+
+  width: 100%;
+  height: 100%;
+
+  padding: 40px 32px;
+
+  background-color: #4d5ae5;
+
+  transition: transform var(--anim-fast);
+
+
+  /* ///////////////// */
   font-size: 16px;
   line-height: 1.5;
 
@@ -839,7 +855,7 @@ button {
   width: calc((100% - 48px) / 3);
 }
 
-.card-link:hover, .overlay-text
+.card-link:hover .overlay-text,
 .card-link:focus .overlay-text {
   transform: translateY(0);
 }
