--- a/css/styles.css
+++ b/css/styles.css
@@ -761,7 +761,7 @@ button {
   background-color: var(--bg-color-darkblue-hover);
 }
 
-/* Cads */
+/* CARDS */
 
 .cards-thumb {
   position: relative;
@@ -855,7 +855,10 @@ button {
   width: calc((100% - 48px) / 3);
 }
 
-.card-link:hover .overlay-text,
+.card-link:hover .overlay-text
+ {
+  transform: translateY(0);
+}
 .card-link:focus .overlay-text {
   transform: translateY(0);
 }
