--- a/css/styles.css
+++ b/css/styles.css
@@ -855,10 +855,7 @@ button {
   width: calc((100% - 48px) / 3);
 }
 
-.card-link:hover .overlay-text
- {
-  transform: translateY(0);
-}
+.card-link:hover .overlay-text,
 .card-link:focus .overlay-text {
   transform: translateY(0);
 }
