--- a/css/styles.css
+++ b/css/styles.css
@@ -813,6 +813,7 @@ button {
   letter-spacing: 0.02em;
 
   color: var(--button-backgroud);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card-title-name {
