--- a/css/styles.css
+++ b/css/styles.css
@@ -114,8 +114,6 @@ button {
 }
 
 .header-nav-link {
-  
-
   display: block;
   position: relative;
   font-weight: 500;
@@ -129,7 +127,7 @@ button {
 }
 
 .header-nav-link::after {
-  content: '';
+  content: "";
 
   position: absolute;
   bottom: 0;
@@ -139,11 +137,11 @@ button {
   width: 100%;
   height: 4px;
   border-radius: 2px;
- /* background-color: #404BBF; */
+  /* background-color: #404BBF; */
 }
 
 /* .....ACTIVE.......*/
-.header-nav-link.active  {
+.header-nav-link.active {
   color: #404bbf;
 }
 
@@ -615,93 +613,6 @@ button {
   background-color: var(--color-icon-hover);
 }
 
-/* MODAL WINDOW */
-
-.backdrop {
-  /* display: none; */
-  position: fixed;
-  top: 0;
-  left: 0;
-
-  z-index: var(--modal-idx);
-
-  width: 100%;
-  height: 100%;
-
-  background: rgba(46, 47, 66, 0.4);
-
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-/* .is-hidden {
-   opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-} */
-
-.backdrop.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-  transition-delay: 250ms;
-
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-}
-
-.modal {
-  position: absolute;
-  top: calc(50%);
-  left: calc(50%);
-  transform: translateX(-50%) translateY(-50%);
-
-  width: 408px;
-  min-height: 576px;
-  background: #fcfcfc;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.backdrop.is-hidden .modal {
-  opacity: 0;
-  transform: translateX(-50%) translateY(-70%);
-  transition-delay: 0ms;
-}
-.modal-close-btn {
-  position: absolute;
-  top: 24px;
-  right: 24px;
-  width: 24px;
-  height: 24px;
-  padding: 0;
-  border-radius: 50%;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  background-color: #e7e9fc;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-close-btn:hover,
-.modal-close-btn:focus {
-  background-color: #404bbf;
-  fill: #ffffff;
-  border: none;
-}
-
-.modal-close-icon {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 /* PORTFOLIO*/
 
 .portfolio {
@@ -727,7 +638,10 @@ button {
   border: 1px solid #e7e9fc;
   border-radius: 4px;
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-list {
@@ -805,7 +719,6 @@ button {
 
   transition: transform var(--anim-fast);
 
-
   /* ///////////////// */
   font-size: 16px;
   line-height: 1.5;
@@ -852,7 +765,6 @@ button {
   row-gap: 48px;
 }
 .card-set-item {
- 
   width: calc((100% - 48px) / 3);
 }
 
@@ -883,4 +795,90 @@ button {
   width: 1158px;
   margin: 0 auto;
   padding: 0 15px;
+}
+
+/* MODAL WINDOW */
+
+.backdrop {
+  /* display: none; */
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  z-index: var(--modal-idx);
+
+  width: 100%;
+  height: 100%;
+
+  background: rgba(46, 47, 66, 0.4);
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* .is-hidden {
+   opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+} */
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition-delay: 250ms;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+  position: absolute;
+  top: calc(50%);
+  left: calc(50%);
+  transform: translateX(-50%) translateY(-50%);
+
+  width: 408px;
+  min-height: 576px;
+  background: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden .modal {
+  opacity: 0;
+  transform: translateX(-50%) translateY(-70%);
+  transition-delay: 0ms;
+}
+.modal-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  border-radius: 50%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  background-color: #404bbf;
+  fill: #ffffff;
+  border: none;
+}
+
+.modal-close-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
