--- a/css/styles.css
+++ b/css/styles.css
@@ -207,8 +207,7 @@ button {
 
 /* Section Hero */
 .hero-container {
-  padding: 0 15px;
-  margin: 0 auto;
+
 }
 
 .hero {
@@ -217,7 +216,7 @@ button {
 
   margin-left: auto;
   margin-right: auto;
-  padding: 188px 0;
+  padding: 251px 0 188px;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
@@ -531,9 +530,9 @@ button {
 .footer {
   background-color: var(--color-txt);
   padding: 100px 0;
-  max-width: 1440px;
+  /* max-width: 1440px;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto; */
 }
 .footer-logo {
   font-family: "Raleway", sans-serif;
@@ -616,7 +615,7 @@ button {
 /* PORTFOLIO*/
 
 .portfolio {
-  padding: 96px 0 120px;
+  padding: 169px 0 120px;
 }
 /* button-port */
 
